assets/queries/terraform/aws/unknown_port_exposed_to_internet/test/positive2.tf
resource "aws_security_group" "positive2" {
  name        = "allow_tls_1"
  description = "Allow TLS inbound traffic"
  vpc_id      = aws_vpc.main.id
}

resource "aws_vpc_security_group_ingress_rule" "positive2_1_rule" {
  security_group_id = aws_security_group.positive2.id
  cidr_ipv4         = "0.0.0.0/0"
  from_port         = 44
  to_port           = 443
  ip_protocol       = "tcp"
  description       = "TLS from VPC"
}

resource "aws_vpc_security_group_ingress_rule" "positive2_2_rule_2" {
  security_group_id = aws_security_group.positive2.id
  cidr_ipv4         = "0.0.0.0/0"
  from_port         = 18
  to_port           = 18
  ip_protocol       = "tcp"
  description       = "TLS from VPC"
}

resource "aws_vpc_security_group_ingress_rule" "positive2_3_rule" {
  security_group_id = aws_security_group.positive2.id
  cidr_ipv6         = "::/0"
  from_port         = 600
  to_port           = 1200
  ip_protocol       = "tcp"
  description       = "Remote desktop open private"
}
